overflow fixes

--- a/frontend/src/css/main.less
+++ b/frontend/src/css/main.less
@@ -27,9 +27,12 @@ html {
 
 body {
   margin: 0;
-  // overflow: hidden;
   color: var(--white);
   background-color: var(--bg-dark);
+}
+
+body:has(.no-overflow) {
+  overflow: hidden;
 }
 
 h1,
